--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-1"></div>
-                    <div class="col-3">
+                    <div class="col-12 col-md-3">
                         <div class="content-img">
                             <img src="image/foto profilo.png" alt="">
                             <h1 class="text-center pt-4">Dario Lo Forti</h1>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="col-2"></div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
                         <div class="content-about">
                             <p id="typewriter" class="fs-5 typing"></p>
                         </div>
