--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
             <div class="container">
                 <div class="row">
                     <h1 class="text-center mb-5">Project</h1>
-                    <div class="col-4">
+                    <div class="col-12 col-md-4">
                         <div class="image">
                             <img src="image/mobile.png" alt="">
                         </div>
                     </div>
-                    <div class="col-8">
+                    <div class="col-12 col-md-8">
                         <p>
                             <p id="writer" class=" typing fs-5"></p>
                             
@@ -257,20 +257,20 @@
                 <div class="row">
                     <h3 class="text-center py-5">I miei Contatti</h3>
                     <div class="col-12 d-flex">
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                             <h5>Tel: <br> <a class="text-white" href="tel:+393496894653">+39 3496894653</a></h5>
                         </div>
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                             <h5>E-mail: <br> <a class="text-white" href="mailto:lofortidario@gmail.com">lofortidario@gmail.com</a></h5>
                         </div>
-                        <div class="col-3">
+                        <div class="col-12 col-md-3">
                             <h5>Indirizzo: <br> <a class="text-white" href="https://maps.google.com/?q=Palermo,Sicilia,Italia">Palermo, Sicilia, Italia</a></h5>
                         </div>
-                        <div class="col-2">
+                        <div class="col-12 col-md-2">
                             <img src="image/25231.png" alt="" style="width: 50px;">
                             <a class="text-white px-3" href="https://github.com/DarioLoForti">GitHub</a>
                         </div>
-                        <div class="col-2">
+                        <div class="col-12 col-md-2">
                             <img src="image/circle-linkedin-512.png" alt="" style="width: 50px;"> 
                             <a class="text-white px-3" href="https://it.linkedin.com/in/dario-lo-forti-237615172">Linkedin</a>
                         </div>
