--- a/index.html
+++ b/index.html
@@ -49,60 +49,58 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <h3 class="text-center mt-5">Le mie Competenze</h3>
-                    <div class="col-12 d-flex justify-content-center mt-5">
-                        <div class="col-1">
+                <div class="row justify-content-center">
+                    <h3 class="text-center my-5">Le mie Competenze</h3>
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/html.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/css.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/bootstrap.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/javascript.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/vue.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/Vite.js.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/node.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/php.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/laravel.png" alt="">
                             </div>
                         </div>
-                        <div class="col-1">
+                        <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/mysql.png" alt="">
                             </div>
-                        </div>
-                    </div>
+                        </div> 
                 </div>
             </div>
         </section>
