--- a/index.html
+++ b/index.html
@@ -273,6 +273,28 @@
             </div>
             </div>
         </section>
+        <section id="contattami" class="my-5">
+            <div class="container">
+                <h2 class="text-center mb-4">Contattami</h2>
+                <form action="YOUR_FORM_HANDLER_URL" method="POST" class="row g-3">
+                    <div class="col-md-6">
+                        <label for="nome" class="form-label">Nome</label>
+                        <input type="text" class="form-control" id="nome" name="nome" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="email" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="col-12">
+                        <label for="messaggio" class="form-label">Messaggio</label>
+                        <textarea class="form-control" id="messaggio" name="messaggio" rows="5" required></textarea>
+                    </div>
+                    <div class="col-12 text-center">
+                        <button type="submit" class="btn btn-primary">Invia</button>
+                    </div>
+                </form>
+            </div>
+        </section>
     </main>
     <footer class="mt-5">
         <p class=" fs-4 py-3">&copy; 2024 Dario Lo Forti</p>
