add form contact

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <section id="contattami" class="my-5">
             <div class="container">
                 <h2 class="text-center mb-4">Contattami</h2>
-                <form action="YOUR_FORM_HANDLER_URL" method="POST" class="row g-3">
+                <form id="contact-form" class="row g-3">
                     <div class="col-md-6">
                         <label for="nome" class="form-label">Nome</label>
                         <input type="text" class="form-control" id="nome" name="nome" required>
@@ -294,11 +294,13 @@
                     </div>
                 </form>
             </div>
-        </section>
+        </section>        
     </main>
     <footer class="mt-5">
         <p class=" fs-4 py-3">&copy; 2024 Dario Lo Forti</p>
     </footer>
     <script src="script.js"></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
 </body>
 </html>
