--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="list-unstyled d-flex justify-content-end mt-3">
                         <li><a class="text-white" href="#about">About</a></li>
                         <li class="mx-3"><a class="text-white" href="#project">Project</a></li>
-                        <li><a class="text-white" href="#contact">Contact</a></li>
+                        <li><a class="text-white" href="#contattami">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -279,15 +279,15 @@
                 <form id="contact-form" class="row g-3">
                     <div class="col-md-6">
                         <label for="nome" class="form-label">Nome</label>
-                        <input type="text" class="form-control" id="nome" name="nome" required>
+                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Inserisci il tuo nome" required>
                     </div>
                     <div class="col-md-6">
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control" id="email" name="email" required>
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Inserisci la tua email" required>
                     </div>
                     <div class="col-12">
                         <label for="messaggio" class="form-label">Messaggio</label>
-                        <textarea class="form-control" id="messaggio" name="messaggio" rows="5" required></textarea>
+                        <textarea class="form-control" id="messaggio" name="messaggio" placeholder="Inserisci il tuo messaggio" rows="5" required></textarea>
                     </div>
                     <div class="col-12 text-center">
                         <button type="submit" class="btn btn-primary">Invia</button>
