--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                         <textarea class="form-control" id="messaggio" name="messaggio" placeholder="Inserisci il tuo messaggio" rows="5" required></textarea>
                     </div>
                     <div class="col-12 text-center">
-                        <button type="submit" class="btn btn-primary">Invia</button>
+                        <button type="submit" class="btn btn-sm color">Invia</button>
                     </div>
                 </form>
             </div>
