--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-6">
-                    <h1 class="text-center">
+                    <h1 class="text-center fs-1">
                         Portfolio
                     </h1>
                 </div>
                 <div class="col-6">
                     <ul class="list-unstyled d-flex justify-content-end mt-3">
-                        <li><a class="text-white" href="#about">About</a></li>
-                        <li class="mx-3"><a class="text-white" href="#project">Project</a></li>
-                        <li><a class="text-white" href="#contattami">Contact</a></li>
+                        <li><a class="text-white fs-5" href="#about">Info</a></li>
+                        <li class="mx-3"><a class="text-white fs-5" href="#competenze">Skills</a></li>
+                        <li class="mx-3"><a class="text-white fs-5" href="#project">Projects</a></li>
+                        <li><a class="text-white fs-5" href="#contattami">Contact me</a></li>
                     </ul>
                 </div>
             </div>
@@ -58,7 +59,8 @@
                     <div class="col-12">
                         <div class="text">
                             <h1 class=" pt-4">Dario Lo Forti</h1>
-                            <h6 class=" pt-2">Jr Full Stack Web Developer</h6>
+                            <h6 id="typewriter" class="fs-5 typing text-center"></h6>
+                            <!-- <h6 class=" pt-2">Jr Full Stack Web Developer</h6> -->
                         </div>
                     </div>
                 </div>
@@ -75,7 +77,7 @@
         <section id="competenze">
             <div class="container">
                 <div class="row justify-content-center">
-                    <h3 class="text-center my-5">Le mie Competenze</h3>
+                    <h3 class="text-center my-5">Skills</h3>
                         <div class="col-4 col-md-1">
                             <div class="loghi">
                                 <img class="p-4" src="image/html.png" alt="">
@@ -252,42 +254,42 @@
                             <img src="image/Desktop-Games Galaxy.png" alt="">
                             <h4 class="text-center pb-3">Games Galaxy</h4>
                             <div class="button d-flex justify-content-center">
-                                <a class="btn btn-sm color" href="https://drive.google.com/file/d/1T_jdqo7Ln1glb-GHHv6hAOG8BDBnPyJe/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                                <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/1T_jdqo7Ln1glb-GHHv6hAOG8BDBnPyJe/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                             </div>
                         </div>
                         <div class="project-img m-3">
                             <img src="image/Desktop-Mixology.png" alt="">
                             <h4 class="text-center pb-3">Mixology</h4>
                             <div class="button d-flex justify-content-center">
-                                <a class="btn btn-sm color" href="https://drive.google.com/file/d/1CdZzNPQCPYy04D4OpxEdmIHlIhV5CxtC/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                                <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/1CdZzNPQCPYy04D4OpxEdmIHlIhV5CxtC/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                             </div>
                         </div>
                         <div class="project-img m-3">
                             <img src="image/Desktop-BDoctors.png" alt="">
                             <h4 class="text-center pb-3">BDoctors</h4>
                             <div class="button d-flex justify-content-center">
-                                <a class="btn btn-sm color" href="https://drive.google.com/file/d/12zBVh00mTAb6PG08IZe03GgjHv3pG0xj/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                                <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/12zBVh00mTAb6PG08IZe03GgjHv3pG0xj/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                             </div>
                         </div>
                         <div class="project-img m-3">
                             <img src="image/Desktop-Boolzapp.png" alt="">
                             <h4 class="text-center pb-3">Boolzapp</h4>
                             <div class="button d-flex justify-content-center">
-                            <a class="btn btn-sm color" href="https://drive.google.com/file/d/1gaUgh_Lw-oguNY553eOtvmv3fqIJzpoo/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                            <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/1gaUgh_Lw-oguNY553eOtvmv3fqIJzpoo/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                         </div>
                         </div>
                         <div class="project-img m-3">
                             <img src="image/Desktop-Comics.png" alt="">
                             <h4 class="text-center pb-3">Comics</h4>
                             <div class="button d-flex justify-content-center">
-                                <a class="btn btn-sm color" href="https://drive.google.com/file/d/1qWquMGrDuWmWIcVwtufev10L1Bw_OjCC/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                                <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/1qWquMGrDuWmWIcVwtufev10L1Bw_OjCC/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                             </div>
                         </div>
                         <div class="project-img m-3">
                             <img src="image/Desktop-you-gi-oh.png" alt="">
                             <h4 class="text-center pb-3">Yu-Gi-Oh</h4>
                             <div class="button d-flex justify-content-center">
-                                <a class="btn btn-sm color" href="https://drive.google.com/file/d/1d9c-B5LNDaTpviUXOEHjpau2SAlSCjSo/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
+                                <a class="btn btn-sm color p-2" href="https://drive.google.com/file/d/1d9c-B5LNDaTpviUXOEHjpau2SAlSCjSo/view?usp=drive_link" class="btn btn-primary">Guarda Video</a>
                             </div>
                         </div>
                     </div>
@@ -297,7 +299,7 @@
         </section>
         <section id="contattami" class="my-5">
             <div class="container">
-                <h2 class="text-center mb-4">Contattami</h2>
+                <h2 class="text-center mb-4">Contact me</h2>
                 <form id="contact-form" class="row g-3">
                     <div class="col-md-6">
                         <label for="nome" class="form-label">Nome</label>
@@ -312,7 +314,7 @@
                         <textarea class="form-control" id="messaggio" name="messaggio" placeholder="Inserisci il tuo messaggio" rows="5" required></textarea>
                     </div>
                     <div class="col-12 text-center">
-                        <button type="submit" class="btn btn-sm color">Invia</button>
+                        <button type="submit" class="btn btn-sm color p-2">Invia</button>
                     </div>
                 </form>
             </div>
