--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <h1 class="text-center fs-1">
                         Portfolio
                     </h1>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <ul class="list-unstyled d-flex justify-content-end mt-3">
                         <li><a class="text-white fs-5" href="#about">Info</a></li>
                         <li class="mx-3"><a class="text-white fs-5" href="#competenze">Skills</a></li>
